--- a/src/index.jade
+++ b/src/index.jade
@@ -8,7 +8,8 @@ block header
     h1 COD
     h2.rule
       span THE UNASSUMING DOC FORMAT
-    //- h5 Documentus modestus
+    h4
+      em (Documentus modestus)
 
 block content
   section.main-example
@@ -53,9 +54,9 @@ block content
 
   section.about
     section.text
-      //- header
+      header
         h1.rule
-          span Stupid by Design
+          span "Stupid by Design"
       p
         | Cod is a language-agnostic documentation format that produces
         | simple, nearly "line-for-line" JSON.
@@ -63,21 +64,25 @@ block content
         | That's all it does.
       p
         | The flexible nature of Cod affords its users a great deal of control:
-
       ul
-        li Integrate Cod's output into your existing web templates.
+        li Integrate Cod's output into your existing development process.
         li Use any markup language in text sections (or none at all).
         li Create domain-specific <code>@tags</code> for concise clarity.
         li Use a single doc format across multiple languages.
         li Easily compare specific versions of your API using <code>diff</code>.
 
       p
+        | Cod has an <a href="http://github.com/namuol/cod#api">easy-to-use CLI</a> and a <a href="http://github.com/namuol/cod#api">JavaScript API</a>.
+      p
+        | Node.js users can install it with <code>npm install -g cod</code>.
+      p
+        | <a href="http://gulpjs.com">gulp</a> users: see <a href="http://github.com/namuol/gulp-cod">gulp-cod</a>.
+      p
+        | See the <a href="http://github.com/namuol/cod">GitHub</a> page for more details.
+      
+      p.light
         | Cod isn't for everybody. If you just need quick, human-readable
         | docs, use an all-in-one solution like
         | <a href="http://www.stack.nl/~dimitri/doxygen/">Doxygen</a> or
         | <a href="sphinx-doc.org">Sphinx</a>.
 
-      p
-        | 
-      p
-        | See its <a href="http://github.com/namuol/cod">GitHub</a> page for details.
