--- a/src/style.styl
+++ b/src/style.styl
@@ -55,7 +55,7 @@ base_width = example_width * 2
   z-index -1
   background-image url('cod.jpg')
   background-repeat no-repeat
-  background-position 51% -100px
+  background-position 51% -180px
   background-size 900px
   width 100%
   height 100%
@@ -101,6 +101,15 @@ header
       background white
       padding 0 10px
 
+.light
+  opacity 0.65
+  font-style italic
+
+hr
+  border 0
+  border-top 1px solid #1e1e1e
+  margin 50px 0
+
 section.text
   center(600px)
   header
@@ -111,7 +120,7 @@ section.text
 .main
   font-family 'Old Standard TT', serif
   margin auto
-  margin-top 280px
+  margin-top 250px
   margin-bottom 300px
   font-size 20px
   color #1E1E1E
