--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
   z-index: -1;
   background-image: url("cod.jpg");
   background-repeat: no-repeat;
-  background-position: 51% -100px;
+  background-position: 51% -180px;
   -webkit-background-size: 900px;
   -moz-background-size: 900px;
   background-size: 900px;
@@ -105,6 +105,17 @@ header .rule span {
   background: #fff;
   padding: 0 10px;
 }
+.light {
+  opacity: 0.65;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=65)";
+  filter: alpha(opacity=65);
+  font-style: italic;
+}
+hr {
+  border: 0;
+  border-top: 1px solid #1e1e1e;
+  margin: 50px 0;
+}
 section.text {
   width: 600px;
   margin: auto;
@@ -118,7 +129,7 @@ section.text header h1 {
 .main {
   font-family: 'Old Standard TT', serif;
   margin: auto;
-  margin-top: 280px;
+  margin-top: 250px;
   margin-bottom: 300px;
   font-size: 20px;
   color: #1e1e1e;
