domain-specific link

--- a/src/index.jade
+++ b/src/index.jade
@@ -78,7 +78,7 @@ block content
             li Use any markup language in text sections (or don't).
             li Use a single doc format across multiple languages.
             li Use your existing website styles instead of writing themes.
-            li Use "domain-specific" tags i.e. <code>@model</code>/<code>@view</code>/<code>@controller</code>
+            li Use <a href="#domain-specific-docs">domain-specific</a> tags i.e. <code>@model</code>/<code>@view</code>/<code>@controller</code>
         p
           | In other words, <em>Cod may not be smart, but it's not stubborn, either</em>.
 
@@ -115,11 +115,12 @@ block content
           | but PHP and Ruby each have their own doc-generators, and suddenly you need to create
           | <em>another</em> two new themes in entirely different doc-gen systems.
         p
-          | This is an ideal use-case for Cod.
+          | This would have been an ideal use-case for Cod.
         p 
-          | Since Cod is completely language-agnostic, it is possible to use the same doc
-          | format in any language, and the resulting JSON can be fed to a <em>single</em> set of templates.
+          | Since Cod is language-agnostic, it is possible to use the same doc
+          | format in all languages, and the resulting JSON can be fed to a <em>single</em> set of templates.
 
+        a(name='domain-specific-docs')
         h4 Domain-Specific Docs
         p
           | Most software is written using higher-level programming patterns (i.e. MVC).
