--- a/src/style.styl
+++ b/src/style.styl
@@ -165,6 +165,7 @@ section.text
       center(example_width * 2)
 
       .example
+        vertical-align top
         display inline-block
         color whitesmoke
         width example_width
